my-apps/ai/vllm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vllm
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
